--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="MyWebsite\startbootstrap-agency-gh-pages\img\Flint.JPG" class="img-responsive" alt="">
+                        <img src="C:\MyWebsite\startbootstrap-agency-gh-pages\img\Flint.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Senior Design Project</h4>
@@ -286,7 +286,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="MyWebsite\startbootstrap-agency-gh-pages\img\volunteer.JPG" class="img-responsive" alt="">
+                        <img src="C:\MyWebsite\startbootstrap-agency-gh-pages\img\volunteer.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Confrences & Volunteer Work</h4>
@@ -300,7 +300,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="MyWebsite\startbootstrap-agency-gh-pages\img\books.JPG" class="img-responsive" alt="">
+                        <img src="C:\MyWebsite\startbootstrap-agency-gh-pages\img\books.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Books I Have Read</h4>
