--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-						<img src="C:\MyWebsite\startbootstrap-agency-gh-pages\img\profilepicture1.PNG">
+						<img src="mysite/img/profilepicture1.png">
 					<h4>Intel Corporation - D1C Manufacturing Technician </h4>
                         <p class="text-muted">Hillsboro, Oregon - Ronler Acres Campus </br></p>
                         <ul class="list-inline social-buttons">
