--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="col-md-3 portfolio-item">
                     <div class="team-member">
-                        <img class="img-circle img-responsive" style= 'object-fit: cover' src="C:\MyWebsite\startbootstrap-agency-gh-pages\img\dad.PNG" alt="">
+                        <img class="img-circle img-responsive" style= 'object-fit: cover' src="https://github.com/jakeasil/mysite/blob/master/img/dad.PNG?raw=true" alt="">
                       
 						<h4>John Silva - Dad</h4>
 						 
