--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" style= 'height: 100%; width: 100%; object-fit: cover' src="https://github.com/jakeasil/mysite/blob/master/img/lobos.JPG?raw=true" alt="">
+                                <img class="img-circle img-responsive" style= 'height: 100%; width: 100%; object-fit: cover' src="https://github.com/jakeasil/mysite/blob/master/img/lobos.jpg?raw=true" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
