--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" style= 'height: 100%; width: 100%; object-fit: cover' src="C:\MyWebsite\startbootstrap-agency-gh-pages\img\https://github.com/jakeasil/mysite/blob/master/img/jnj.JPG?raw=true" alt="">
+                                <img class="img-circle img-responsive" style= 'height: 100%; width: 100%; object-fit: cover' src="https://github.com/jakeasil/mysite/blob/master/img/jnj.JPG?raw=true" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
